2007-11-26  Stefan Kost  <ensonic@users.sf.net>

	* gst/level/gstlevel.c:
	  Add GAP-flag support.

2007-11-26  Edward Hervey  <bilboed@bilboed.com>

	* gst/rtp/gstrtph263depay.c: (gst_rtp_h263_depay_process):
	Read the I flag for Mode A h263 rtp stream and set the
	GST_BUFFER_FLAG_DELTA_UNIT accordingly.
	Fixes #499383

2007-11-26  Stefan Kost  <ensonic@users.sf.net>

	* gst/level/gstlevel.c:
	  Remove some dead code and do cleanups.

2007-11-26  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/pipelines/simple-launch-lines.c:
	  Improve the tests by allowing to set a target state.

2007-11-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/elements/wavpackenc.c: (GST_START_TEST):
	Don't check the caps of the output buffer if they're equal some
	other caps. The caps can change in a backward compatible way
	and did at this point.

2007-11-24  Julien MOUTTE  <julien@moutte.net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_find_segment),
	(gst_qtdemux_move_stream), (gst_qtdemux_do_seek),
	(gst_qtdemux_seek_to_previous_keyframe),
	(gst_qtdemux_activate_segment), (gst_qtdemux_advance_sample),
	(gst_qtdemux_loop_state_movie), (gst_qtdemux_loop): Implement
	reverse playback support.

2007-11-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackcommon.c: (gst_wavpack_set_channel_layout):
	Also set the channel layout on the Wavpack caps if we're having
	a mono layout. Of course only do it for "audio/x-wavpack".

2007-11-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackcommon.c:
	(gst_wavpack_get_default_channel_mask),
	(gst_wavpack_set_channel_layout),
	(gst_wavpack_get_default_channel_positions),
	(gst_wavpack_get_channel_mask_from_positions),
	(gst_wavpack_set_channel_mapping):
	* ext/wavpack/gstwavpackcommon.h:
	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_reset),
	(gst_wavpack_dec_sink_set_caps), (gst_wavpack_dec_chain):
	* ext/wavpack/gstwavpackdec.h:
	* ext/wavpack/gstwavpackenc.c: (gst_wavpack_enc_reset),